--- a/FrontEnd/SysAcad/src/index.html
+++ b/FrontEnd/SysAcad/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SysAcad</title>
+  <title>Auto-Gestion</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="system_11629897(3).png">
